@@ -5,11 +5,13 @@ import lab.space.vilki_palki.model.admin.AdminResponse;
 import lab.space.vilki_palki.model.admin.AdminResponseByPage;
 import org.springframework.data.domain.Page;
 
+import java.util.stream.Collectors;
+
 
 public interface AdminMapper {
     static AdminResponseByPage toAdminsResponseByPage(Page<Admin> admins) {
         return AdminResponseByPage.builder()
-                .data(admins.stream().map(AdminMapper::toDto).toList())
+                .data(admins.stream().map(AdminMapper::toDto).collect(Collectors.toList()))
                 .pagesCount(admins.getTotalPages())
                 .itemsCount(admins.getTotalElements())
                 .build();
