@@ -6,10 +6,11 @@ import lab.space.vilki_palki.model.order.OrderResponseByPage;
 import org.springframework.data.domain.Page;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public interface OrderMapper {
     static List<OrderResponse> toSimplifiedListDto(List<Order> orders) {
-        return orders.stream().map(OrderMapper::toSimplifiedDto).toList();
+        return orders.stream().map(OrderMapper::toSimplifiedDto).collect(Collectors.toList());
     }
 
     static OrderResponse toSimplifiedDto(Order order) {
@@ -26,7 +27,7 @@ public interface OrderMapper {
 
     static OrderResponseByPage toOrderResponseByPage(Page<Order> orders) {
         return OrderResponseByPage.builder()
-                .data(orders.stream().map(OrderMapper::toSimplifiedDto).toList())
+                .data(orders.stream().map(OrderMapper::toSimplifiedDto).collect(Collectors.toList()))
                 .itemsCount(orders.getTotalElements())
                 .pagesCount(orders.getTotalPages())
                 .build();
